[workspace]
resolver = "2"
members = [
    "crates/isg-core",
    "crates/isg-encoders",
    "crates/isg-storage",
    "crates/isg-erasure",
    "crates/isg-crypto",
    "crates/isg-db",
    "crates/isg-tier",
    # "crates/isg-fuse",  # Optional: requires FUSE system library
    "crates/isg-sync",
    "crates/isg-orchestrator",
    "crates/isg-cli",
    "crates/isg-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["lessuseless-systems"]
license = "MIT"
repository = "https://github.com/lessuseless-systems/infinite-storage-glitch"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
sha2 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Compression
zstd = "0.13"
flate2 = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Internal crates
isg-core = { path = "crates/isg-core" }
isg-encoders = { path = "crates/isg-encoders" }
isg-storage = { path = "crates/isg-storage" }
isg-erasure = { path = "crates/isg-erasure" }
isg-crypto = { path = "crates/isg-crypto" }
isg-db = { path = "crates/isg-db" }
isg-tier = { path = "crates/isg-tier" }
isg-fuse = { path = "crates/isg-fuse" }
isg-sync = { path = "crates/isg-sync" }
isg-orchestrator = { path = "crates/isg-orchestrator" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
