[package]
name = "isg-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Crypto (for hashing)
sha2.workspace = true

# Utilities
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true

# Logging
tracing.workspace = true

# Encoding
hex = "0.4"
