[package]
name = "isg-encoders"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
isg-core.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Image processing
image = "0.24"

# QR codes
qrcode = "0.13"

# Compression
zstd.workspace = true
flate2.workspace = true
brotli = "3.4"

# Utilities
bytes.workspace = true

# Logging
tracing.workspace = true

# Utilities
once_cell = "1.19"

[dev-dependencies]
isg-crypto.workspace = true
