[package]
name = "isg-fuse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
isg-core = { workspace = true }
isg-storage = { workspace = true }
isg-db = { workspace = true }

# FUSE
fuser = "0.14"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
