[package]
name = "isg-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
isg-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
bytes = { workspace = true }
uuid = { workspace = true }

# HTTP clients
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Logging
tracing = { workspace = true }
