[package]
name = "isg-tier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
isg-core = { workspace = true }
isg-storage = { workspace = true }
isg-db = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
